# fortran-table

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  tags
src/: makefile  table_mo.f90  table_mo_old.f90
src/VIM_BAKUP_FILES/: %home%hss%0_tkd%1_hss%2_tools%fortran-table%src%table_mo.f90-202505171758
test/: CMakeLists.txt  comparison_with_duckdb.R  table1.csv  table1.parquet  table2.csv  table2.parquet  test_table_nrows10k.csv  unit_test.f90
test/VIM_BAKUP_FILES/: %home%hss%0_tkd%1_hss%2_tools%fortran-table%test%unit_test.f90-202505171758
test/large_data/: CMakeLists.txt  comparison_with_duckdb.R  dt_mo.f90  makefile  test_table_nrows10k.csv  unit_test_large_data.f90
